@@ -8,6 +8,9 @@ more ICCCM-compliant.
 The implementation of the RENDER client protocol has been
 enhanced. (Gilbert Baumann)
 
+Bug fix: CIRCULATE-NOTIFY, CIRCULATE-REQUEST and PROPERTY-NOTIFY input
+event descriptions have been fixed.
+
 ---  Changes in SBCL CLX 0.6, Tue Nov 16 2004  ---
 
 A port to ECL has been merged (Juan Jose Garcia Ripoll)
